changelog: avoid cutting off commit messages
Split commit message into 2 <div> elements: one with just the first line, and
one with the full message. This makes it easier to handle the toggling of
showing the whole commit message. This way, we no longer have to mess with the
line height, and we avoid problems with cutting off parts of the text below the
text baseline.

Also stop cutting off the first line if it is too long for the table column.

It adds a bit of overhead to store the first line twice, but having them
separate make things simpler and is worth it.

Patch modified by Mads Kiilerich.

--- a/kallithea/public/css/style.css
+++ b/kallithea/public/css/style.css
@@ -1510,10 +1510,9 @@ tr.out-of-range {
 
 #graph_content tr td.mid .message,
 #graph_content_pr .compare_view_commits .message {
-    white-space: pre-wrap;
+    white-space: nowrap;
     padding: 0;
     overflow: hidden;
-    height: 1.2em;
 }
 
 #graph_content_pr .compare_view_commits .message {
